--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
+    "react-spinners": "^0.13.6",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.3",
     "wagmi": "^0.8.4"
